--- a/100game.html
+++ b/100game.html
@@ -56,6 +56,7 @@
 　　スコア <input type="text" size=2 id="score">
  （ <select name="passScore" id="passScore">
 <option value="100">100
+<option value="98">98
 <option value="95" selected>95
 <option value="90">90
 <option value="1">1
@@ -141,10 +142,14 @@ var startTime = 0;
 // 効果音
 // 先読みのため初回にグローバル変数を作っておく
 // ブラウザによっては、初回再生前に頭出し処理ができないため、再生したかどうかのフラグを置く
-var soundCorrect = new Audio("Quiz-Correct_Answer02-1.mp3");
-var soundWrong = new Audio("Quiz-Wrong_Buzzer02-1.mp3");
+var soundCorrect = new Audio("Quiz-Correct_Answer02-1.mp3");  // 正解
 var soundCorrectPlayed = 0;
+var soundWrong = new Audio("Quiz-Wrong_Buzzer02-1.mp3");      // 不正解
 var soundWrongPlayed = 0;
+var soundClear = new Audio("Quiz-Results02-1.mp3");           // 合格
+var soundClearPlayed = 0;
+var soundGameOver = new Audio("Phrase04-1.mp3");        // 不合格
+var soundGameOverPlayed = 0;
 
 
 // --------------------------------------------------
@@ -372,7 +377,7 @@ $(window).keydown(function(e)
 
 // --------------------------------------------------
 function playSound(n)
-  // n番目の音を再生。現状 n は1(Correct) or 2(Wrong) の決め打ち
+  // n番目の音を再生。現状 n は1(Correct) 2(Wrong) 3(soundClear) 4(soundGameOver) の決め打ち
 {
   var soundEnabled = $("#soundEnabled").prop("checked");
   if(! soundEnabled)
@@ -392,9 +397,9 @@ function playSound(n)
     }
     soundCorrect.play();
   }
+
   else if(n == 2)
   {
-
     if(soundWrongPlayed == 0)
     {
       soundWrongPlayed = 1;
@@ -404,8 +409,34 @@ function playSound(n)
       soundWrong.currentTime = 0;
     }
     soundWrong.play();
-
   }
+
+  else if(n == 3)
+  {
+    if(soundClearPlayed == 0)
+    {
+      soundClearPlayed = 1;
+    }
+    else
+    {
+      soundClear.currentTime = 0;
+    }
+    soundClear.play();
+  }
+
+  else if(n == 4)
+  {
+    if(soundGameOverPlayed == 0)
+    {
+      soundGameOverPlayed = 1;
+    }
+    else
+    {
+      soundGameOver.currentTime = 0;
+    }
+    soundGameOver.play();
+  }
+
 
 }
 
@@ -527,7 +558,13 @@ function finishAllColumn()
   if(score >= passScore)
   {
     $("#sheetComplete").show();
+    playSound(3);
   }
+  else
+  {
+    playSound(4);
+  }
+
 
   alert("結果：" + score + "点。所要時間：" + m + "分" + s + "秒。おつかれさま！");
 }
@@ -548,12 +585,13 @@ function main()
 <br><br>
 <hr>
 (c) Nozomi<br>
-v1.2  2015/07/25  合格点のときにはなまるを表示 (標準では95点で合格)・タブレットとりあえず対応 (スマホでも動くけど画面小さすぎ)<br>
+v1.2.1  2015/07/30  合格・不合格での音追加<br>
 <!--
+v1.2  2015/07/25  合格点のときにはなまるを表示 (標準では95点で合格)・タブレットとりあえず対応 (スマホでも動くけど画面小さすぎ)<br>
 v1.1  2015/07/23  効果音と「Ｘ」画像を追加<br>
 v1.0  2015/07/22  1st ver.<br>
 -->
 <br>
-効果音：<a href="http://musicisvfr.com/free/se/quiz01.html">Music VFR</a>さまで公開されている素材を利用 (CC BY 4.0ライセンス)
+効果音：<a href="http://musicisvfr.com/">Music VFR</a>さまで公開されている素材を利用(<a href="http://musicisvfr.com/free/se/quiz01.html">正解・不正解</a>／<a href="http://musicisvfr.com/free/se/phrase01.html">クリア</a>) (CC BY 4.0ライセンス)
 </body>
 </html>
