--- a/100game.html
+++ b/100game.html
@@ -7,19 +7,38 @@
 <script type="text/javascript" src="jquery-2.1.4.min.js"></script>
 
 
-<!-- デバッグ用 -->
+<!-- デバッグ用 -------------------------------------------------- -->
 <style type="text/css">
   .controller {   display:none /**/ }  /* コメント化するとデバッグ用情報を表示 */
 </style>
 <script type="text/javascript">
-  var startX = 1;  // この座標のマスから始める
-  var startY = 1;
+  var startX = 10;  // この座標のマスから始める
+  var startY = 10;
 </script>
 
 
-<!-- ここからメイン -->
+
+<!-- ここからメイン -------------------------------------------------- -->
 <style type="text/css">
-  .sheet { background: #eee }                /* 表全体 */
+  .sheet {                                   /* 表全体 */
+     background: #eee;
+     position: relative;
+     top: 0px;
+     border: 0px;
+     border-spacing: 0px;
+   }
+  .sheet tr {                                /* 各列 */
+    border: 2px;
+  }
+  .sheet .hiddenColumn                       /* perfect文字列書き込み用の隠しカラム */
+  {
+    border: 0px;
+    background: #fff;
+    width:200px;
+    font-family: Impact;
+    font-size: 30px;
+    color: blue;
+  }
   .currentColumn { background: #ffa }        /* フォーカスのあるマス */
   .currentColumnHeader {                     /* フォーカスのある行・列 */
      background: #cff;
@@ -31,9 +50,24 @@
     background-image: url("wrongAnswer.png")
   }
   .sheetComplete {                           /* 全問正解のはなまる。最初は隠れている */
-    display: none
+    display: none;
+    position: absolute;
+    top: 0px;
+    left: -40px;
+  }
+  .sheetCompleteText {                       /* スコア等の表示。最初は隠れている */
+    display: none;
+    font-size: 50px;
+    color: blue;
+    font-weight: bold;
+    text-shadow: 2px 2px 0px #fff;
+    text-align: center;
+    position: absolute;
+    top: 200px;
+    left: 100px;
   }
 </style>
+
 
 <script type="text/javascript">
 
@@ -55,25 +89,26 @@ var soundGameOver = new Audio("Phrase04-1.mp3");              // 不合格
 var soundGameOverPlayed = 0;
 
 
+
 // --------------------------------------------------
 function makeColumnName(x, y, flag)
-  // #s12 とかの名前を作る
-  // 3つめの引数を指定すると # をつけなくなる (s12とかなる)
+  // #s12 とかの名前を作る。table タグにおいて、各 column の id 名となる。
+  // 3つめの引数を指定すると # をつけなくなる (前の例では、s12となる)
 {
-  var xx = x;  if(xx == 10) { xx = "a"; }
+  var xx = x;  if(xx == 10) { xx = "a"; }    if(xx == 11) { xx = "b"; }
   var yy = y;  if(yy == 10) { yy = "a"; }
-  var columnName  = "s" +  xx  + yy;
-  if(typeof flag === "undefined")
-  {
-    columnName = "#" + columnName;
-  }
+
+  var columnName  = "s" +  xx  + yy;1
+  if(typeof flag === "undefined") {  columnName = "#" + columnName;  }
+
   return columnName;
 }
 
 
+
 // --------------------------------------------------
 function focusColumnSub (x, y, a)
-  // 内部関数。座標(x,y)の色を付けたり消したり。CSSクラスの追加削除を行う
+  // 内部関数。座標(x,y)の色を付けたり消したりするために、CSSクラスの追加削除を行う
   // x,y：座標。1～10の数字であること (引数チェックはしていない)
   // a: 1なら追加、2なら削除
 {
@@ -88,6 +123,7 @@ function focusColumnSub (x, y, a)
       $(columnNameX).addClass("currentColumnHeader")
       $(columnNameY).addClass("currentColumnHeader")
     });
+
   } else {
     $(function(){
       $(columnName).removeClass("currentColumn")
@@ -98,10 +134,13 @@ function focusColumnSub (x, y, a)
 };
 
 
+
+
 // --------------------------------------------------
   // 座標(x,y)の色を付ける/消す。x,y は1～10の数字
-function focusColumn (x, y) { focusColumnSub (x, y, 1) };
+function focusColumn (x, y)   { focusColumnSub (x, y, 1) };
 function unfocusColumn (x, y) { focusColumnSub (x, y, 2) };
+
 
 
 // --------------------------------------------------
@@ -121,14 +160,14 @@ function randN(min, max, prev)
 }
 
 
+
 // --------------------------------------------------
 function remake()
   // 表の再作成。ページロード・ボタン押下で呼ばれる
 {
   var calcType = $("#calcType").val();
 
-  var minX=1, maxX=9, minY=1, maxY=9, typestr="", divflag=0;  // 念のためのデフォルト値をセット
-
+  var minX, maxX, minY, maxY, typestr;
   if     (calcType == "add_1_1")   { minX=1;   maxX=9;   minY=1;   maxY=9;   typestr="足しざん";  }
   else if(calcType == "add_2_1")   { minX=10;  maxX=99;  minY=1;   maxY=9;   typestr="足しざん";  }
   else if(calcType == "add_1_2")   { minX=1;   maxX=9;   minY=10;  maxY=99;  typestr="足しざん";  }
@@ -136,7 +175,7 @@ function remake()
   else if(calcType == "add_2_2")   { minX=10;  maxX=99;  minY=10;  maxY=99;  typestr="足しざん";  }
   else if(calcType == "sub_2_1")   { minX=10;  maxX=19;  minY=1;   maxY=9;   typestr="引きざん";  }
   else if(calcType == "mul_1_1")   { minX=1;   maxX=9;   minY=1;   maxY=9;   typestr="かけざん";  }
-  else if(calcType == "div_2_1")   { minX=10;  maxX=99;  minY=2;   maxY=9;   typestr="わりざん";  divflag=1;  }
+  else if(calcType == "div_2_1")   { minX=10;  maxX=99;  minY=2;   maxY=9;   typestr="わりざん";  }
   else                             { alert("プログラムのどこかにミスがある模様(r)");  return;  }
 
   $("#calcTypeStr").val(typestr);
@@ -145,11 +184,12 @@ function remake()
 
   // table タグを生成。割り算時にはテーブル構成が変わるので表自体を動的生成する
   var sheetstr = "";
-  sheetstr += '<table border="1px" class="sheet" style="position: relative; top: 0px;">' + "\n";
+  sheetstr += '<table border="1px" class="sheet">' + "\n";
 
 
   // 1列目 (数値が書かれている列)
   sheetstr += '<tr height=50px><th width=50px id="s00">';
+
   var x1=0, x2;
   for(var cols=0; cols<10; cols++) {
     var columnName = makeColumnName(cols+1, 0, 1);
@@ -157,52 +197,62 @@ function remake()
     sheetstr += '<th width=50px id="' + columnName + '">' + x2;
     x1 = x2;
   }
+
+  sheetstr += '<td class="hiddenColumn">';
   sheetstr += "\n";
 
-  // 2列目以降 (除算以外)
-  if(divflag == 0)
-  {
-    var y1 = 0;
-    var y2;
 
+  // 2列目以降 (除算以外の場合)
+  if(typestr != "わりざん")
+  {
+    var y1=0, y2;
     for(var rows=0; rows<10; rows++)
     {
-      var columnName = makeColumnName(0, rows+1, 1);
+      var columnName = makeColumnName(0, rows+1, 1);       // 左の数値
       y2 = randN(minY,maxY,y1);
       sheetstr += '<tr height=50px>';
       sheetstr += '<th id="' + columnName + '">' + y2;
       y1 = y2;
-      for(var cols=0; cols<10; cols++) {
+
+      for(var cols=0; cols<10; cols++) {                   // 解答欄の空欄部分
         columnName = makeColumnName(cols+1, rows+1, 1);
         sheetstr += '<td id="' + columnName + '">';
       }
+
+      columnName = makeColumnName(11, rows+1, 1);
+      sheetstr += '<td id="' + columnName + '" class="hiddenColumn">';
+
       sheetstr += "\n";
     }
   }
 
 
-  // 縦の列2列目以降 (除算)
-  else    // divflag == 0
+  // 縦の列2列目以降 (除算の場合)
+  else
   {
-    var y1 = 0;
-    var y2;
-
+    var y1=0, y2;
     for(var rows=0; rows<5; rows++)
     {
-      var columnName = makeColumnName(0, rows*2+1, 1);
+      var columnName = makeColumnName(0, rows*2+1, 1);     // 左の数値
       y2 = randN(minY,maxY,y1);
       sheetstr += '<tr height=40px>';
       sheetstr += '<th rowspan=3 id="' + columnName + '">' + y2;
       y1 = y2;
-      for(var cols=0; cols<10; cols++) {
+
+      for(var cols=0; cols<10; cols++) {                   // 解答欄の商の部分
         columnName = makeColumnName(cols+1, rows*2+1, 1);
         sheetstr += '<td style="border-bottom: 0px" id="' + columnName + '">';
       }
-      sheetstr += '<tr height=20px>';
+
+      columnName = makeColumnName(11, rows*2+1, 1);       // perfecct表示用マス
+      sheetstr += '<td rowspan=3 id="' + columnName + '" class="hiddenColumn">';
+
+      sheetstr += '<tr height=20px>';                      // 「あまり」と記載するためのマス
       for(var cols=0; cols<10; cols++) {
         sheetstr += '<td style="border-top: 0px; border-bottom: 0px"><font size="-3">　あまり</font>';
       }
-      sheetstr += '<tr height=40px>';
+
+      sheetstr += '<tr height=40px>';                      // 解答欄の剰余の部分
       for(var cols=0; cols<10; cols++) {
         columnName = makeColumnName(cols+1, rows*2+2, 1);
         sheetstr += '<td style="border-top: 0px" id="' + columnName + '">';
@@ -210,13 +260,13 @@ function remake()
     }
   }
 
-
   sheetstr += '<table>';
 
   // HTMLに書き込み
-  document.getElementById("sheet").innerHTML = sheetstr;
+  $("#sheet").html(sheetstr);
 
   // tableタグの作成ここまで
+
 
 
   // すべての表示色・表示内容をリセット
@@ -232,16 +282,22 @@ function remake()
     }
   }
 
+
   // 各種値をリセット
   $("#score").val(0);
+  $("#rowScore").val(0);
   startTime = 0;
   $("#sheetComplete").hide();
+  $("#sheetCompleteText").text();
+  $("#sheetCompleteText").hide();
 }
+
 
 
 // --------------------------------------------------
 function calcKeta(n)
-  // nの桁数を求める。nは正の値であること
+  // nの桁数を求める
+  // nは0以上の整数であること。引数チェックはしていない
 {
   var i = 1;
   var ii = 1;
@@ -270,38 +326,37 @@ function gotoXY(x,y)
 {
   var calcType = $("#calcTypeStr").val();
 
-  var oldX = $("#currentColumnX").val();
+  var oldX = $("#currentColumnX").val();     // 昔の場所の色を消す
   var oldY = $("#currentColumnY").val();
   unfocusColumn(oldX, oldY);
 
-  $("#currentColumnX").val(x);
+  $("#currentColumnX").val(x);               // 新しい場所に色を付ける
   $("#currentColumnY").val(y);
-
   focusColumn(x,y);
 
-  var columnNameX = makeColumnName(x, 0);
+  var columnNameX = makeColumnName(x, 0);    // 上に書いてある数値
   var valueX = $(columnNameX).text();
 
-  // 除算の剰余を求める場合、Yの位置がずれる
-  var yy = y;
+  var yy = y;                                // 左に書いてある数値。除算の剰余を求める場合、Yの位置がずれる
   if(calcType == "わりざん" && y%2 == 0) { yy--; }
   var columnNameY = makeColumnName(0, yy);
   var valueY = $(columnNameY).text();
 
-  var answer;
-  if     (calcType == "足しざん") { answer = parseInt(valueX) + parseInt(valueY); }
+  var answer;                                // 解を求める
+  if     (calcType == "足しざん") { answer = parseInt(valueX) + parseInt(valueY); }  // parseIntなしでは文字列の加算になる
   else if(calcType == "引きざん") { answer = valueX - valueY; }
   else if(calcType == "かけざん") { answer = valueX * valueY; }
   else if(calcType == "わりざん" && y%2 == 1) { answer = Math.floor(valueX / valueY); }
   else if(calcType == "わりざん") { answer = valueX % valueY; }
-  else                            { alert("プログラムのどこかにミスがある模様(g)"); return; }
+  else                            { alert("プログラムのどこかにミスがある模様(g)");  return; }
   $("#correctAnswer").val(answer);
 
-  var keta = calcKeta(answer);
+  var keta = calcKeta(answer);               // 解の桁数を求める。入力を受け付ける際に使用する
   $("#correctAnswerKeta").val(keta);
 
-  $("#inputAnswer").val("");
+  $("#inputAnswer").val("");                 // 入力中の値をクリア
 }
+
 
 
 // --------------------------------------------------
@@ -340,9 +395,11 @@ $(window).keydown(function(e)
 });
 
 
+
 // --------------------------------------------------
 function playSound(n)
-  // n番目の音を再生。現状 n は1(Correct) 2(Wrong) 3(soundClear) 4(soundGameOver) の決め打ち
+  // 指定された種類の音を再生
+  // 現状 n は1(Correct) 2(Wrong) 3(soundClear) 4(soundGameOver) の決め打ち
 {
   var soundEnabled = $("#soundEnabled").prop("checked");
   if(! soundEnabled)
@@ -352,7 +409,7 @@ function playSound(n)
 
   if(n == 1)
   {
-    if(soundCorrectPlayed == 0)
+    if(soundCorrectPlayed == 0)           // 初回再生では currentTimeをいじれないための処理
     {
       soundCorrectPlayed = 1;
     }
@@ -410,8 +467,7 @@ function inputandCheckAnswer(n)
   // 値を入力、入力された値を確認
   // n：0～9＝数字、10＝BS
 {
-  // 開始時間をセット
-  if(startTime == 0)
+  if(startTime == 0)                                     // 初回の入力の場合＝解答はじめ。開始時間をセット
   {
     startTime = new Date();
   }
@@ -419,69 +475,76 @@ function inputandCheckAnswer(n)
   var correctAnswer = $("#correctAnswer").val();
   var correctAnswerKeta = $("#correctAnswerKeta").val();
 
-  var inputAnswer = $("#inputAnswer").val();  // columnName を直接扱うと、空白文字のせいで誤動作する
+  var inputAnswer = $("#inputAnswer").val();             // columnName を直接扱うと、空白文字のせいで誤動作するため、入力中文字専用の記憶エリアを設けてある
 
-  if(inputAnswer == "" && n == 0 && correctAnswer != 0)  // 最初の文字が0、かつ、正解が0でない
+  if(inputAnswer == "" && n == 0 && correctAnswer != 0)  // 最初の文字が0、かつ、正解が0でない → 0ではじまる数値は無いので何もせず帰る
   {
     return;
   }
 
-  if(inputAnswer == "" && n == 10)  // BS・DELで既入力なし
+  if(inputAnswer == "" && n == 10)                       // BS・DELであり、既に入力した文字が無い場合 → 何もせず帰る
   {
     return;
   }
 
-  if(0 <= n && n <= 9)
+  if(0 <= n && n <= 9)                                   // 数値の場合
   {
     inputAnswer += n;
   }
-  else if(n == 10)  // BS・DEL
+
+  else if(n == 10)                                       // BS・DELの場合
   {
     inputAnswer = Math.floor(inputAnswer / 10);
     if(inputAnswer == 0) { inputAnswer = ""; }
   }
+
   else
   {
     alert("プログラムのどこかにミスがある模様(i)");
     return;
   }
 
-  $("#inputAnswer").val(inputAnswer);
-  
-  var x = $("#currentColumnX").val();
+  $("#inputAnswer").val(inputAnswer);                    // 入力中の値を記憶
+
+  var x = $("#currentColumnX").val();                    // 入力中の値を表のマスに表示
   var y = $("#currentColumnY").val();
   var columnName = makeColumnName(x, y);
   $(columnName).text(inputAnswer);
 
-  // BS・DELの結果、inputAnswer が "" になってしまった場合に、帰る
-  if(inputAnswer == "")
+  if(inputAnswer == "")                                 // BS・DELの結果、inputAnswer が "" になってしまった場合に → ここで終わり
   {
     return;
   }
 
   var inputAnswerKeta = calcKeta(inputAnswer);
 
-  if(correctAnswer == inputAnswer)  // 正解
+  if(correctAnswer == inputAnswer)                      // 正解の場合
   {
     $(columnName).addClass("correctColumn");
     var score = $("#score").val();
     score++;
     $("#score").val(score);
+    var rowScore = $("#rowScore").val();
+    rowScore++;
+    $("#rowScore").val(rowScore);
     playSound(1);
     gotoNext();
   }
-  else if(correctAnswerKeta <= inputAnswerKeta)  // 入力桁数と正答桁数が同じ、かつ、不正解(不正解確定)
+
+  else if(correctAnswerKeta <= inputAnswerKeta)         // 入力桁数と正答桁数が同じ、かつ、不正解(不正解確定)
   {
     $(columnName).addClass("wrongColumn");
     playSound(2);
     gotoNext();
   }
-  else  // 入力桁数が正答桁数に満たない
+
+  else                                                  // 入力桁数が正答桁数に満たない
   {
     return;
   }
 
 }
+
 
 
 // --------------------------------------------------
@@ -492,18 +555,19 @@ function gotoNext()
   var y = $("#currentColumnY").val();
   var calcType = $("#calcTypeStr").val();
 
-  if(calcType != "わりざん")
+  if(calcType != "わりざん")                           // 除算以外：右のマスへ移動
   {
-    // 除算以外：右のマスへ移動
     x++;
     if(x==11)
     {
+      finishRow(y);
       x=1;
       y++;
     }
 
     if(y==11)
     {
+      finishRow(y);
       finishAllColumn();
     }
     else
@@ -512,32 +576,31 @@ function gotoNext()
     }
   }
 
-  else
+  else if(y%2 == 1)                                    // 除算で、商入力中 → 剰余入力へ (1個下へ)
   {
-    // 除算の場合
-    if(y%2 == 1)  // 商入力中 → 剰余入力へ
-    {
-      y++;
-      gotoXY(x,y);
-    }
-    else  // 剰余入力中 → 次のマスへ
-    {
-      x++;
-      y--;
-      if(x==11)
-      {
-        x=1;
-        y+=2;
-      }
+    y++;
+    gotoXY(x,y);
+  }
 
-      if(y==11)
-      {
-        finishAllColumn();
-      }
-      else
-      {
-        gotoXY(x,y);
-      }
+  else                                                 // 剰余入力中 → 次のマスへ
+  {
+    x++;
+    y--;
+    if(x==11)
+    {
+      finishRow(y);
+      x=1;
+      y+=2;
+    }
+
+    if(y==11)
+    {
+      finishRow(y);
+      finishAllColumn();
+    }
+    else
+    {
+      gotoXY(x,y);
     }
   }
 
@@ -545,18 +608,38 @@ function gotoNext()
 
 
 // --------------------------------------------------
+function finishRow(y)
+  // 1列終わったときの処理
+{
+  var calcType = $("#calcTypeStr").val();
+
+  var rowScore = $("#rowScore").val();               // 列perfectチェク
+  if((calcType == "わりざん" && rowScore == 20) ||
+     (calcType != "わりざん" && rowScore == 10))
+  {
+
+    var columnName = makeColumnName(11, y);          // perfect文字書き込み
+    $(columnName).text("Perfect");
+  }
+
+  $("#rowScore").val(0);                             // 列スコアをリセット
+}
+
+
+
+// --------------------------------------------------
 function finishAllColumn()
+  // 全マス終わったときの処理
 {
   var score = $("#score").val();
 
-  var endTime = new Date();
+  var endTime = new Date();                             // 解答時間を求める
   var s = endTime - startTime;  // ミリ秒
   s = Math.floor((s + 999)/1000);
   m = Math.floor (s / 60);
   s -= (m * 60);
 
-  var passScore = parseInt( $("#passScore").val() );
-
+  var passScore = parseInt( $("#passScore").val() );    // 合格点に達している場合の処理
   if(score >= passScore)
   {
     $("#sheetComplete").show();
@@ -572,6 +655,7 @@ function finishAllColumn()
 }
 
 
+
 // --------------------------------------------------
 function main()
 {
@@ -584,14 +668,14 @@ function main()
 // --------------------------------------------------
 </script>
 
-
 </head>
+
 
 <body onload="main()">
 
 <font size="+2" style="text-decoration:underline">みんなの100ます計算(ゲームバージョン)</font><br>
 <br>
-　　<select name="calcType" id="calcType">
+　　<select name="calcType" id="calcType" onchange="main()">
 <option value="add_1_1">足し算 (１けた)
 <option value="add_2_1">足し算 (２けた＋１けた)
 <option value="add_1_2">足し算 (１けた＋２けた)
@@ -616,7 +700,8 @@ function main()
 
 <div style="position: relative">
   <div id="sheet"></div><!-- 表はここに動的生成される。表全体の class が sheet。カラムの id が、s のあとに、縦、横の順の数字 (0～a)。s00～saaまで -->
-  <img src="complete.png" class="sheetComplete" id="sheetComplete" style="position: absolute; top: 0px; "><!-- はなまる画像 -->
+  <img src="complete.png" class="sheetComplete" id="sheetComplete"><!-- はなまる画像 -->
+  <div class="sheetCompleteText" id="sheetCompleteText">100点<br>2分３０秒かかりました<br>おつかれさま！</div>
 </div>
 
 <br>
@@ -630,13 +715,17 @@ function main()
  正答：<input type="text" size=2 id="correctAnswer">
  桁数：<input type="text" size=1 id="correctAnswerKeta">
  入力中の値：<input type="text" size=2 id="inputAnswer">
+ 列スコア：<input type="text" size=2 id="rowScore">
+
 </div>
 
 <br><br>
 <hr>
 (c) Nozomi<br>
-v1.3  2015/09/26  除算対応<br>
+v1.4.1  2015/09/27  結果表示をalertからhtmlに変更<br>
 <!--
+v1.4  2015/09/26  Perfect表示<br>
+v1.3  2015/09/26  除算対応<br>
 v1.2.1  2015/07/30  合格・不合格での音追加<br>
 v1.2  2015/07/25  合格点のときにはなまるを表示 (標準では95点で合格)・タブレットとりあえず対応 (スマホでも動くけど画面小さすぎ)<br>
 v1.1  2015/07/23  効果音と「Ｘ」画像を追加<br>
