--- a/100game.html
+++ b/100game.html
@@ -9,11 +9,11 @@
 
 <!-- デバッグ用 -------------------------------------------------- -->
 <style type="text/css">
-  .controller {   display:none /**/ }  /* コメント化するとデバッグ用情報を表示 */
+  .controller {  display:none /**/ }  /* コメント化するとデバッグ用情報を表示 */
 </style>
 <script type="text/javascript">
-  var startX = 10;  // この座標のマスから始める
-  var startY = 10;
+  var startX = 1;  // この座標のマスから始める
+  var startY = 1;
 </script>
 
 
@@ -38,6 +38,7 @@
     font-family: Impact;
     font-size: 30px;
     color: blue;
+    text-shadow: 1px 1px 1px #888;
   }
   .currentColumn { background: #ffa }        /* フォーカスのあるマス */
   .currentColumnHeader {                     /* フォーカスのある行・列 */
@@ -58,9 +59,9 @@
   .sheetCompleteText {                       /* スコア等の表示。最初は隠れている */
     display: none;
     font-size: 50px;
-    color: blue;
+    color: #ff0;
     font-weight: bold;
-    text-shadow: 2px 2px 0px #fff;
+    text-shadow: 4px 2px 4px #000;
     text-align: center;
     position: absolute;
     top: 200px;
@@ -504,6 +505,14 @@ function inputandCheckAnswer(n)
     return;
   }
 
+  var inputAnswerKeta = calcKeta(inputAnswer);
+
+  if(correctAnswerKeta < inputAnswerKeta)               // 入力桁数が正解桁数より多い (最後のマスで入力を続けると起こる) → 無視して戻る
+  {
+    return;
+  }
+
+
   $("#inputAnswer").val(inputAnswer);                    // 入力中の値を記憶
 
   var x = $("#currentColumnX").val();                    // 入力中の値を表のマスに表示
@@ -515,8 +524,6 @@ function inputandCheckAnswer(n)
   {
     return;
   }
-
-  var inputAnswerKeta = calcKeta(inputAnswer);
 
   if(correctAnswer == inputAnswer)                      // 正解の場合
   {
@@ -531,7 +538,7 @@ function inputandCheckAnswer(n)
     gotoNext();
   }
 
-  else if(correctAnswerKeta <= inputAnswerKeta)         // 入力桁数と正答桁数が同じ、かつ、不正解(不正解確定)
+  else if(correctAnswerKeta == inputAnswerKeta)         // 入力桁数と正答桁数が同じ、かつ、不正解(不正解確定)
   {
     $(columnName).addClass("wrongColumn");
     playSound(2);
@@ -650,8 +657,8 @@ function finishAllColumn()
     playSound(4);
   }
 
-
-  alert("結果：" + score + "点。所要時間：" + m + "分" + s + "秒。おつかれさま！");
+  $("#sheetCompleteText").html("スコア：" + score + "点<br>" + m + "分" + s + "秒かかりました<br>おつかれさま！");
+  $("#sheetCompleteText").show();
 }
 
 
@@ -701,7 +708,7 @@ function main()
 <div style="position: relative">
   <div id="sheet"></div><!-- 表はここに動的生成される。表全体の class が sheet。カラムの id が、s のあとに、縦、横の順の数字 (0～a)。s00～saaまで -->
   <img src="complete.png" class="sheetComplete" id="sheetComplete"><!-- はなまる画像 -->
-  <div class="sheetCompleteText" id="sheetCompleteText">100点<br>2分３０秒かかりました<br>おつかれさま！</div>
+  <div class="sheetCompleteText" id="sheetCompleteText"><!-- ここに得点などを表示 --></div>
 </div>
 
 <br>
