--- a/100game.html
+++ b/100game.html
@@ -822,7 +822,7 @@ function main()
 <option value="add_1_2">足し算 (１けた＋２けた)
 <option value="add_2s_2s">足し算 (１９までの２けた)
 <option value="add_2_2">足し算 (２けた)
-<option value="add_3_3">足し算 (３けた)
+<option value="add_3_3">足し算 (３けた) ※超絶難易度
 <option value="sub_2_1">引き算 (２けた－１けた)
 <option value="mul_1_1">かけ算 (１けた)
 <option value="div_2_1">わり算 (２けた÷１けた)
@@ -849,15 +849,17 @@ function main()
 <td onclick="inputandCheckAnswer(1)">1
 <td onclick="inputandCheckAnswer(2)">2
 <td onclick="inputandCheckAnswer(3)">3
+<tr>
 <td onclick="inputandCheckAnswer(4)">4
 <td onclick="inputandCheckAnswer(5)">5
-<td rowspan=2 onclick="inputandCheckAnswer(10)">←
-<tr>
 <td onclick="inputandCheckAnswer(6)">6
+<tr>
 <td onclick="inputandCheckAnswer(7)">7
 <td onclick="inputandCheckAnswer(8)">8
 <td onclick="inputandCheckAnswer(9)">9
+<tr>
 <td onclick="inputandCheckAnswer(0)">0
+<td colspan=2 onclick="inputandCheckAnswer(10)">←
 </table>
 </div>
 
@@ -885,17 +887,18 @@ function main()
 <br><br>
 <hr>
 (c) Nozomi<br>
-v1.5.1  2015/09/28  ソフトウェアキーボードに計算式を表示<br>
+v1.5.2  2015/10/03  ソフトウェアキーボードを縦型に変更<br>
 <!--
-v1.5  2015/09/27  ソフトウェアキーボードの表示<br>
+v1.5.1  2015/09/28  ソフトウェアキーボードに計算式を表示<br>
+v1.5    2015/09/27  ソフトウェアキーボードの表示<br>
 v1.4.2  2015/09/27  除算時、商を誤答したら、剰余をスキップ<br>
 v1.4.1  2015/09/27  結果表示をalertからhtmlに変更<br>
-v1.4  2015/09/26  Perfect表示<br>
-v1.3  2015/09/26  除算対応<br>
+v1.4    2015/09/26  Perfect表示<br>
+v1.3    2015/09/26  除算対応<br>
 v1.2.1  2015/07/30  合格・不合格での音追加<br>
-v1.2  2015/07/25  合格点のときにはなまるを表示 (標準では95点で合格)・タブレットとりあえず対応 (スマホでも動くけど画面小さすぎ)<br>
-v1.1  2015/07/23  効果音と「Ｘ」画像を追加<br>
-v1.0  2015/07/22  1st ver.<br>
+v1.2    2015/07/25  合格点のときにはなまるを表示 (標準では95点で合格)・タブレットとりあえず対応 (スマホでも動くけど画面小さすぎ)<br>
+v1.1    2015/07/23  効果音と「Ｘ」画像を追加<br>
+v1.0    2015/07/22  1st ver.<br>
 -->
 <br>
 効果音：<a href="http://musicisvfr.com/">Music VFR</a>さまで公開されている素材を利用(<a href="http://musicisvfr.com/free/se/quiz01.html">正解・不正解</a>／<a href="http://musicisvfr.com/free/se/phrase01.html">クリア</a>) (CC BY 4.0ライセンス)
